--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,3 +23,6 @@ jobs:
         goos: ${{ matrix.goos }}
         goarch: ${{ matrix.goarch }}
         ldflags: '-s -w'
+        extra_files: output readme.md
+        md5sum: false
+        executable_compression: upx -v
